# TorchTrio

./: .dockerignore  .gitignore  .hfignore  Dockerfile  README.md  app.py  github_setup.md  hf_spaces_guide.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
data/: tickets.json
server/: __init__.py  app.py  env.py  graders.py  models.py  reward.py  tasks.py
