[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supportopsenv"
version = "1.0.0"
description = "AI customer support inbox simulation with graded tasks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn[standard]==0.27.1",
    "pydantic==2.7.0",
    "openai>=2.7.2",
    "numpy>=2.0.0",
    "pillow",
    "python-dotenv==1.0.1",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["server"]